--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,16 +1,16 @@
 modLoader="javafml"
-loaderVersion="[37,)"
+loaderVersion="[38,)"
 license="MIT"
 
 [[mods]]
 modId="apples"
-version="1.1"
+version="1.2"
 displayName="Apples & Carrots"
 
 logoFile="icon.png"
 authors="agorasim20"
 description='''
-New Special Apples and Carrots with effects
+Special Apples and Carrots with effects
 
 Hope you enjoy this adventure!
 <3
@@ -21,13 +21,13 @@ Home: https://www.curseforge.com/minecraft/mc-mods/apples-carrots-forge
 [[dependencies.apples]]
     modId="forge"
     mandatory=true
-    versionRange="[37,)"
+    versionRange="[38,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.apples]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.17.1,1.18)"
+    versionRange="[1.18,1.19)"
     ordering="NONE"
     side="BOTH"
